fix icon spacing in vote buttons

--- a/client/stylesheets/bootstrap_ext/buttons.import.less
+++ b/client/stylesheets/bootstrap_ext/buttons.import.less
@@ -24,15 +24,10 @@
   border-radius: 100%;
   font-size: 22px;
   text-align: center;
+  letter-spacing: -1px; // fix weird spacing issue
 
   &[disabled] {
     opacity: 1;
-  }
-
-  // not sure why our ionicons are too wide and not centering properly:
-  i {
-    width: 10px;
-    font-size: 22px;
   }
 }
 
